--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     integrity="sha512-2w85qGM9apXW9EgevsY4S4fnJIUz6U6mXlLbgDKphBuwh7jPQNad70Ll5W+pcIrJ6rIMGpjP0CxYGQwKsynIaQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-  <title>Document</title>
+  <title>Phone </title>
 </head>
 
 <body>
@@ -165,32 +165,7 @@
   </nav>
 
 
-  <!-- slider -->
-  <!-- <div class="slider"> 
-  <div id="carouselExampleIndicators" class="carousel slide">
-
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="./assest/imgs/phono-slider-1 (1).webp" class="d-block w-100" alt="slider">
-      </div>
-      <div class="carousel-item">
-        <img src="./assest/imgs/phono-slider-2.webp" class="d-block w-100" alt="slider">
-      </div>
-      <div class="carousel-item">
-        <img src="./assest/imgs/phono-slider-3.webp" class="d-block w-100" alt="slider">
-      </div>
-    </div>
-    <button class="carousel-control-prev shadow" type="button" data-bs-target="#carouselExampleIndicators"
-      data-bs-slide="prev">
-      <span class="carousel-control-prev-icon shadow" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next shadow" type="button" data-bs-target="#carouselExampleIndicators"
-      data-bs-slide="next">
-      <span class="carousel-control-next-icon shadow" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div> -->
+ 
 
   <div id="carouselExampleCaptions" class="carousel slide">
     <div class="carousel-indicators">
@@ -203,16 +178,16 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./assest/imgs/phono-slider-1.webp" class="d-block w-100" alt="slider">
+        <img src="./assest/imgs/phono-slider-1.webp" class="d-block imgs" alt="slider">
         <div class="carousel-caption d-none d-md-block">
-          <p>DELTA PROSSEING FOR</p>
-          <h5> FULL SCREEN DISPLY</h5>
-          <button class="btn btn-black  btn-slider">SHOP NOW</button>
+          <p class="mt-5">DELTA PROSSEING FOR</p>
+          <h5 class="mb-5"> FULL SCREEN DISPLY</h5>
+          <button class="btn btn-black  btn-slider ">SHOP NOW</button>
         </div>
       </div>
       <div class="carousel-item">
         <img src="./assest/imgs/phono-slider-2.webp" class="d-block w-100" alt="slider">
-        <div class="carousel-caption d-none d-md-block text-black">
+        <div class="carousel-caption d-none d-md-block text-black  carousel-2 " >
           <p>DELTA PROSSEING FOR</p>
           <h5> FULL SCREEN DISPLY</h5>
           <button class="btn btn-black  btn-slider">SHOP NOW</button>
@@ -327,8 +302,11 @@
 
       <div class="main">
         <div class="row">
+          <div class="imgs">
+            <img src="./assest/imgs/hotspot_2934b3a5-cd7e-49be-b709-8269a17f7390.webp" alt="" style="width: fit-content;">
+          </div>
+     
 
-          <img src="./assest/imgs/hotspot_2934b3a5-cd7e-49be-b709-8269a17f7390.webp" alt="" style="width: fit-content;">
 
         </div>
       </div>
@@ -376,8 +354,7 @@
 
           </div>
           <div class="col-lg-4">
-
-            <img src="./assest/imgs/center-img.webp" alt="centersd">
+            <img src="./assest/imgs/center-img.webp" alt="centersd" style=" max-width: 100%;">
           </div>
           <div class="col-lg-4">
             <div class="feat1 d-flex mb-5 ">
@@ -422,12 +399,12 @@
         <p class="text-secondary text-center" style="letter-spacing: 8px; font-weight: 600;">DESIGNED TO PERFECTION
           AND SECURE</p>
       </div>
-      <div class="row mt-5">
-        <div class="col-lg-6">
-          <img src="./assest/imgs/center-img.webp" alt="imgs">
+      <div class="row mt-5 m-auto">
+        <div class="col-lg-5 imgss">
+          <img src="./assest/imgs/center-img.webp" alt="imgs" style=" max-width: 100%;">
 
         </div>
-        <div class="col-lg-6 mt-5">
+        <div class="col-lg-7 mt-5">
           <div class="accordion" id="accordionExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingOne">
@@ -524,15 +501,7 @@
     </div>
   </section>
 
-<!--   <div class="cards swiper-slide">
-                  <div class="imgs-sliser">
-                     <img src="./assest/imgs/p9.webp" alt="">
-                     </div>
-              <div class="card-contents">
-                <h3>hello WORLD</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, repellendus.</p>
-              </div>
-            </div> -->
+
 
   <footer class="fixed-bottom">
     <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione, veritatis.</span>
