--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   </nav>
 
 
-
+<!-- carousel sliders -->
   <div id="carouselExampleCaptions" class="carousel slide">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -197,7 +197,7 @@
     </button>
   </div>
   </div>
-
+<!--end carousel sliders -->
   <div class="under-slider">
     <div class="row pt-3">
       <div class="col">
@@ -411,7 +411,7 @@
       </div>
 
   </section>
-
+<!-- accoridion -->
   <section class="accordions bg-dark text-white">
     <div class="container">
       <div class="head-perfonce">
@@ -506,7 +506,7 @@
 
   </section>
 
-
+<!-- new rrriver -->
   <section class="sec-arrives mt-5">
     <div class="container">
       <div class="slide-container swiper">
